CHANGE improved mini-POI rendering

--- a/ZMapper/ZMapper.csproj
+++ b/ZMapper/ZMapper.csproj
@@ -177,6 +177,12 @@
   <ItemGroup>
     <None Include="Resources\DPOISelector.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\DPOIMini.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\OWPOIMini.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
