--- a/ZMapper/ZMapper.csproj
+++ b/ZMapper/ZMapper.csproj
@@ -183,6 +183,9 @@
   <ItemGroup>
     <None Include="Resources\OWPOIMini.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Todo.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
