CHANGE Icon, window caption, how hotkey status is displayed

--- a/ZMapper/ZMapper.csproj
+++ b/ZMapper/ZMapper.csproj
@@ -187,6 +187,12 @@
   <ItemGroup>
     <None Include="Todo.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ZMap.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ZMapRed.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
