ADD saving of settings

--- a/ZMapper/ZMapper.csproj
+++ b/ZMapper/ZMapper.csproj
@@ -76,6 +76,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="StringSection.cs" />
     <Compile Include="Win32.cs" />
     <EmbeddedResource Include="Form1.resx">
