--- a/ZMapper/ZMapper.csproj
+++ b/ZMapper/ZMapper.csproj
@@ -59,6 +59,105 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="GlobalInputs.cs" />
+    <Compile Include="HtmlRenderer.WinForms\Adapters\BrushAdapter.cs" />
+    <Compile Include="HtmlRenderer.WinForms\Adapters\ContextMenuAdapter.cs" />
+    <Compile Include="HtmlRenderer.WinForms\Adapters\ControlAdapter.cs" />
+    <Compile Include="HtmlRenderer.WinForms\Adapters\FontAdapter.cs" />
+    <Compile Include="HtmlRenderer.WinForms\Adapters\FontFamilyAdapter.cs" />
+    <Compile Include="HtmlRenderer.WinForms\Adapters\GraphicsAdapter.cs" />
+    <Compile Include="HtmlRenderer.WinForms\Adapters\GraphicsPathAdapter.cs" />
+    <Compile Include="HtmlRenderer.WinForms\Adapters\ImageAdapter.cs" />
+    <Compile Include="HtmlRenderer.WinForms\Adapters\PenAdapter.cs" />
+    <Compile Include="HtmlRenderer.WinForms\Adapters\WinFormsAdapter.cs" />
+    <Compile Include="HtmlRenderer.WinForms\HtmlContainer.cs" />
+    <Compile Include="HtmlRenderer.WinForms\HtmlLabel.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="HtmlRenderer.WinForms\HtmlPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="HtmlRenderer.WinForms\HtmlRender.cs" />
+    <Compile Include="HtmlRenderer.WinForms\HtmlToolTip.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="HtmlRenderer.WinForms\MetafileExtensions.cs" />
+    <Compile Include="HtmlRenderer.WinForms\Utilities\ClipboardHelper.cs" />
+    <Compile Include="HtmlRenderer.WinForms\Utilities\Utils.cs" />
+    <Compile Include="HtmlRenderer.WinForms\Utilities\Win32Utils.cs" />
+    <Compile Include="HtmlRenderer\Adapters\Entities\RColor.cs" />
+    <Compile Include="HtmlRenderer\Adapters\Entities\RDashStyle.cs" />
+    <Compile Include="HtmlRenderer\Adapters\Entities\RFontStyle.cs" />
+    <Compile Include="HtmlRenderer\Adapters\Entities\RKeyEvent.cs" />
+    <Compile Include="HtmlRenderer\Adapters\Entities\RMouseEvent.cs" />
+    <Compile Include="HtmlRenderer\Adapters\Entities\RPoint.cs" />
+    <Compile Include="HtmlRenderer\Adapters\Entities\RRect.cs" />
+    <Compile Include="HtmlRenderer\Adapters\Entities\RSize.cs" />
+    <Compile Include="HtmlRenderer\Adapters\RAdapter.cs" />
+    <Compile Include="HtmlRenderer\Adapters\RBrush.cs" />
+    <Compile Include="HtmlRenderer\Adapters\RContextMenu.cs" />
+    <Compile Include="HtmlRenderer\Adapters\RControl.cs" />
+    <Compile Include="HtmlRenderer\Adapters\RFont.cs" />
+    <Compile Include="HtmlRenderer\Adapters\RFontFamily.cs" />
+    <Compile Include="HtmlRenderer\Adapters\RGraphics.cs" />
+    <Compile Include="HtmlRenderer\Adapters\RGraphicsPath.cs" />
+    <Compile Include="HtmlRenderer\Adapters\RImage.cs" />
+    <Compile Include="HtmlRenderer\Adapters\RPen.cs" />
+    <Compile Include="HtmlRenderer\Core\CssData.cs" />
+    <Compile Include="HtmlRenderer\Core\CssDefaults.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\Border.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\CssBox.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\CssBoxFrame.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\CssBoxHr.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\CssBoxImage.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\CssBoxProperties.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\CssLayoutEngine.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\CssLayoutEngineTable.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\CssLength.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\CssLineBox.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\CssRect.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\CssRectImage.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\CssRectWord.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\CssSpacingBox.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\CssUnit.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\HoverBoxBlock.cs" />
+    <Compile Include="HtmlRenderer\Core\Dom\HtmlTag.cs" />
+    <Compile Include="HtmlRenderer\Core\Entities\CssBlock.cs" />
+    <Compile Include="HtmlRenderer\Core\Entities\CssBlockSelectorItem.cs" />
+    <Compile Include="HtmlRenderer\Core\Entities\HtmlGenerationStyle.cs" />
+    <Compile Include="HtmlRenderer\Core\Entities\HtmlImageLoadEventArgs.cs" />
+    <Compile Include="HtmlRenderer\Core\Entities\HtmlLinkClickedEventArgs.cs" />
+    <Compile Include="HtmlRenderer\Core\Entities\HtmlLinkClickedException.cs" />
+    <Compile Include="HtmlRenderer\Core\Entities\HtmlRefreshEventArgs.cs" />
+    <Compile Include="HtmlRenderer\Core\Entities\HtmlRenderErrorEventArgs.cs" />
+    <Compile Include="HtmlRenderer\Core\Entities\HtmlRenderErrorType.cs" />
+    <Compile Include="HtmlRenderer\Core\Entities\HtmlScrollEventArgs.cs" />
+    <Compile Include="HtmlRenderer\Core\Entities\HtmlStylesheetLoadEventArgs.cs" />
+    <Compile Include="HtmlRenderer\Core\Entities\LinkElementData.cs" />
+    <Compile Include="HtmlRenderer\Core\Handlers\BackgroundImageDrawHandler.cs" />
+    <Compile Include="HtmlRenderer\Core\Handlers\BordersDrawHandler.cs" />
+    <Compile Include="HtmlRenderer\Core\Handlers\ContextMenuHandler.cs" />
+    <Compile Include="HtmlRenderer\Core\Handlers\FontsHandler.cs" />
+    <Compile Include="HtmlRenderer\Core\Handlers\ImageDownloader.cs" />
+    <Compile Include="HtmlRenderer\Core\Handlers\ImageLoadHandler.cs" />
+    <Compile Include="HtmlRenderer\Core\Handlers\SelectionHandler.cs" />
+    <Compile Include="HtmlRenderer\Core\Handlers\StylesheetLoadHandler.cs" />
+    <Compile Include="HtmlRenderer\Core\HtmlContainerInt.cs" />
+    <Compile Include="HtmlRenderer\Core\HtmlRendererUtils.cs" />
+    <Compile Include="HtmlRenderer\Core\Parse\CssParser.cs" />
+    <Compile Include="HtmlRenderer\Core\Parse\CssValueParser.cs" />
+    <Compile Include="HtmlRenderer\Core\Parse\DomParser.cs" />
+    <Compile Include="HtmlRenderer\Core\Parse\HtmlParser.cs" />
+    <Compile Include="HtmlRenderer\Core\Parse\RegexParserHelper.cs" />
+    <Compile Include="HtmlRenderer\Core\Parse\RegexParserUtils.cs" />
+    <Compile Include="HtmlRenderer\Core\Utils\ArgChecker.cs" />
+    <Compile Include="HtmlRenderer\Core\Utils\CommonUtils.cs" />
+    <Compile Include="HtmlRenderer\Core\Utils\CssConstants.cs" />
+    <Compile Include="HtmlRenderer\Core\Utils\CssUtils.cs" />
+    <Compile Include="HtmlRenderer\Core\Utils\DomUtils.cs" />
+    <Compile Include="HtmlRenderer\Core\Utils\HtmlConstants.cs" />
+    <Compile Include="HtmlRenderer\Core\Utils\HtmlUtils.cs" />
+    <Compile Include="HtmlRenderer\Core\Utils\RenderUtils.cs" />
+    <Compile Include="HtmlRenderer\Core\Utils\SubString.cs" />
     <Compile Include="InputModeEditor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -193,6 +292,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ZMapRed.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="HtmlRenderer\Core\Utils\ImageError.png" />
+    <Content Include="HtmlRenderer\Core\Utils\ImageLoad.png" />
+    <None Include="Resources\HTMLRendererLicense.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
